--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -95,6 +95,15 @@ bed_model = ender2_bed.stl
 bed_texture = ender2.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+#[printer_model:CR5PRO]
+#name = Creality CR-5 Pro
+#variants = 0.4
+#technology = FFF
+#family = CR
+#bed_model = cr10mini_bed.stl
+#bed_texture = cr10mini.svg
+#default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 #[printer_model:CR6SE]
 #name = Creality CR-6 SE
 #variants = 0.4
@@ -883,6 +892,14 @@ bed_shape = 0x0,150x0,150x150,0x150
 max_print_height = 200
 printer_model = ENDER2
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER2\nPRINTER_HAS_BOWDEN
+
+#[printer:Creality CR-5 Pro]
+#inherits = *common*; *slowabl*; *descendingz*
+#retract_length = 3
+#bed_shape = 2.5x5,302.5x5,302.5x225,2.5x225
+#max_print_height = 380
+#printer_model = CR5PRO
+#printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR5PRO\nPRINTER_HAS_BOWDEN
 
 #[printer:Creality CR-6 SE]
 #inherits = *common*; *fastabl*; *pauseprint*
