--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -104,6 +104,15 @@ default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @
 #bed_texture = cr5pro.svg
 #default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+#[printer_model:CR5PROH]
+#name = Creality CR-5 Pro H
+#variants = 0.4
+#technology = FFF
+#family = CR
+#bed_model = cr5pro_bed.stl
+#bed_texture = cr5pro.svg
+#default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 #[printer_model:CR6SE]
 #name = Creality CR-6 SE
 #variants = 0.4
@@ -905,11 +914,19 @@ printer_notes = Don't remove the following keywords! These keywords are used in 
 
 #[printer:Creality CR-5 Pro]
 #inherits = *common*; *slowabl*; *descendingz*
-#retract_length = 3
+#retract_length = 6
 #bed_shape = 5x5,295x5,295x220,5x220
 #max_print_height = 380
 #printer_model = CR5PRO
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR5PRO\nPRINTER_HAS_BOWDEN
+
+#[printer:Creality CR-5 Pro H]
+#inherits = *common*; *slowabl*; *descendingz*
+#retract_length = 3
+#bed_shape = 5x5,295x5,295x220,5x220
+#max_print_height = 380
+#printer_model = CR5PROH
+#printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR5PROH\nPRINTER_HAS_BOWDEN
 
 #[printer:Creality CR-6 SE]
 #inherits = *common*; *fastabl*; *pauseprint*
