creality.ini: add Devil Design approx spool weights
by manufacturer specifications:
https://devildesign.com/download/PLA_-_product_card.pdf

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -637,6 +637,7 @@ first_layer_bed_temperature = 60
 filament_cost = 19.00
 filament_density = 1.24
 filament_colour = #FF0000
+filament_spool_weight = 250
 
 [filament:Devil Design PLA (Galaxy) @CREALITY]
 inherits = *PLA*
@@ -648,6 +649,7 @@ first_layer_bed_temperature = 65
 filament_cost = 19.00
 filament_density = 1.24
 filament_colour = #FF0000
+filament_spool_weight = 250
 
 [filament:Extrudr PLA NX2 @CREALITY]
 inherits = *PLA*
